<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_accInfo"
            android:icon="@drawable/ic_accinfo"
            android:title="@string/menu_accInfo" />
        <item
            android:id="@+id/nav_Cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_Cart" />
        <item
            android:id="@+id/nav_Contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/menu_contacts" />

        <item
            android:id="@+id/nav_History"
            android:icon="@drawable/history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>