<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.accInfo.GalleryFragment">


        <LinearLayout
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email" />

            <EditText
                android:id="@+id/edit_email_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"

                android:enabled="false"
                android:inputType="textPersonName"
                android:text="email" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fullName_infoACC" />

            <EditText
                android:id="@+id/edit_fullName_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="fullName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_infoACC" />

            <EditText
                android:id="@+id/edit_address_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="address" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phoneNumber_infoACC" />

            <EditText
                android:id="@+id/edit_phoneNumber_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="phoneNumber" />

            <Button
                android:id="@+id/button_changePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changePass_infoACC" />

            <Button
                android:id="@+id/button_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update" />

            <Button
                android:id="@+id/button_logOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logOut_infoACC" />
        </LinearLayout>
    </LinearLayout>