<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8DC3DC"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_book"
        android:fontFamily="cursive"
        android:gravity="left|center"
        android:paddingLeft="40dp"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="Email"
        android:textColor="#DA5151" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#DA5151"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="Password"
        android:textColor="#DA5151" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginHorizontal="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#DA5151"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox_saveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/save_password"
            android:layout_weight="1"
            android:textSize="13dp"
            android:textColor="#BD7670" />

        <TextView
            android:id="@+id/textView_forGetPass"
            android:gravity="right"
            android:textSize="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="none"
            android:onClick="click"
            android:textColor="#061B91"
            android:text="@string/fogot_password" />

    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bg"
        android:onClick="click"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="click"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#071D97" />

</LinearLayout>