<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Toolbar
        android:background="#132FCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu_Cart"/>
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_book_detail"
            android:layout_width="113dp"
            android:layout_height="165dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/cart1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_tenSach_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="26dp"
                android:text="Tên sách"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView_book_detail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_gia_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="31dp"
                android:text="Giá"
                android:textColor="#EA1303"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/imageView_book_detail"
                app:layout_constraintTop_toBottomOf="@+id/textView_tenSach_detail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_soLuong_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="25dp"
                    android:text="Số lượng: "
                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView_book_detail"
                    app:layout_constraintTop_toBottomOf="@+id/textView_gia_detail" />

                <EditText
                    android:id="@+id/editTextNumber_sl_detail"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/introduce"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView_mota_detail"
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:layout_marginHorizontal="10dp"
        android:text="Mô tả"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_book_detail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back_detail"
            android:background="@drawable/background_so_luong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/back" />

        <Button
            android:background="@drawable/background_so_luong"
            android:id="@+id/button_add_cart_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="Thêm vào giỏ hàng" />
    </LinearLayout>

</LinearLayout>